# audiveris-api

./: .dockerignore  .gitignore  CaddyfileExample  Dockerfile  docker-compose.yml  env_example  pyproject.toml  test_image_preprocess.py
api/: PRESETS.md  README.md  cleanup.py  config.py  deps.py  exceptions.py  main.py  models.py  presets.py  repository.py  requirements.txt  routes.py  services.py  worker.py
app/src/main/java/org/audiveris/omr/sheet/rhythm/: Voices.java
